--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
-    <title>Platformer Game</title>
-</head>
-<body>
-    <canvas id="my-canvas"></canvas>
-
-    <script src="Functions\functions-new.js"></script>   
-    <script src="Functions\functions-old.js"></script> 
-    <script src="main.js"></script>    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Platformer Game</title>
+    </head>
+    <body>
+        <canvas id="my-canvas"></canvas>
+        <div class="tutorial" id="tutorial">
+            Tutorial Book:
+            <div class="arrows">
+                >
+                <button class="buttons" id="tutorial_activate">
+                    Basic Tutorial
+                </button>
+                <br />
+                >
+                <button class="buttons">etc...</button>
+                <br />
+            </div>
+        </div>
+        <script src="Functions\functions-new.js"></script>
+        <script src="Functions\functions-old.js"></script>
+        <script src="main.js"></script>
+    </body>
 </html>
