--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
             Tutorial Book:
             <div class="arrows">
                 >
+                <button class="buttons" id="background_info">Background Info</button>
+                <br />
+                >
                 <button class="buttons" id="tutorial_activate">
                     Basic Tutorial
                 </button>
                 <br />
-                >
-                <button class="buttons">etc...</button>
-                <br />
             </div>
         </div>
-        <script src="Functions\functions-new.js"></script>
         <script src="Functions\functions-old.js"></script>
+        <!-- <script src="Functions\functions-experiments.js"></script> -->
         <script src="main.js"></script>
     </body>
 </html>
